# xcelerate

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-and-release.yml  build-core.yml  build-packages.yml  publish-only.yml  release-full.yml
bindings/csharp/: .gitignore  Browser.cs  Element.cs  Page.cs  README_NUGET.md  Xcelerate.CSharp.csproj  xcelerate_core.cs
bindings/csharp/Xcelerate.TestApp/: Program.cs  Xcelerate.TestApp.csproj
bindings/javascript/: .gitignore  README.md  index.d.ts  index.js  package-lock.json  package.json  xcelerate-0.1.6.tgz  xcelerate_core-ffi.d.ts  xcelerate_core-ffi.js  xcelerate_core.d.ts  xcelerate_core.js
bindings/python/: .gitignore  README.md  pyproject.toml  test_stealth.py
bindings/python/xcelerate/: __init__.py  xcelerate_core.py
examples/: google_search.rs
scripts/: bump_version.py  generate_all.py  generate_all_bindings.py  generate_cs_wrapper.py  generate_csharp_bindings.py  generate_javascript_bindings.py  generate_python_bindings.py
src/: browser.rs  cdc_payload.js  element.rs  error.rs  lib.rs  page.rs
src/bindings/: csharp.rs
src/bindings/csharp/: NativeMethods.g.cs
src/cdp/: mod.rs
src/connection/: client.rs  handler.rs  mod.rs
src/stealth/: mod.rs  patcher.rs  process.rs
