[package]
name = "xcelerate"
version = "0.1.1"
edition = "2024"
authors = ["AzzoDude"]
description = "A high-performance, lightweight Chrome DevTools Protocol (CDP) client for Rust."
license = "MIT"
copyright = "Copyright © 2026 AzzoDude"
repository = "https://github.com/AzzoDude/xcelerate"
documentation = "https://docs.rs/xcelerate"
keywords = ["automation", "cdp", "chrome", "headless", "browser", "ffi", "automation-library"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
csbindgen = "1.9.7"

[dependencies]
browser-protocol = "0.1.2"
js-protocol = "0.1.2"
futures = "0.3.32"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
thiserror = "2.0"
tempfile = "3.10"
base64 = "0.22"
once_cell = "1.19"
