[package]
name = "xcelerate"
version = "0.1.3"
edition = "2024"
authors = ["AzzoDude"]
description = "A high-performance, lightweight Chrome DevTools Protocol (CDP) client for Rust."
license = "MIT"
repository = "https://github.com/AzzoDude/xcelerate"
documentation = "https://docs.rs/xcelerate"
keywords = ["automation", "cdp", "chrome", "headless", "stealth"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[lib]
name = "xcelerate_core"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
uniffi = { version = "0.29", features = ["tokio"] }
browser-protocol = "0.1.2"
js-protocol = "0.1.2"
futures = "0.3.32"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
thiserror = "2.0"
tempfile = "3.10"
base64 = "0.22"
once_cell = "1.19"
regex = "1.10"
libc = "0.2"
